# ComfyUI-SimplePixal3D

./: README.md  __init__.py  autotune_cache.json  install.py  nodes.py  pyproject.toml
pixal3d/modules/attention/: proj_attention.py
pixal3d/modules/sparse/: config.py
pixal3d/modules/sparse/attention/: full_attn.py  proj_attention.py
pixal3d/pipelines/: __init__.py
workflow/: pixal3d.json
